# backend/docs/swagger.json
@@ -3062,7 +3062,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ent.Promotion"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ent.Promotion"
+                            }
                         }
                     },
                     "400": {
